--- a/facets/house-doctor/style.css
+++ b/facets/house-doctor/style.css
@@ -2,6 +2,69 @@
     text-align: left !important;
 }
 
+@media only screen and (max-width: 767px) {
+    .clerk-facet-group:before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        right: 11px;
+        width: 8px;
+        height: 8px;
+        text-align: center;
+        border: 1px solid #333;
+        border-width: 0 2px 2px 0;
+        font-size: 10px;
+        color: #e4e4e4;
+        transform: translateY(calc(-50% - 5px)) rotate(45deg);
+        transition: 0.3s ease-in-out;
+        font-size: 18px;
+        z-index: 1;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .facet_wrap {
+        display: none;
+        position: absolute !important;
+        box-shadow: 1px 9px 14px 0px rgba(123, 121, 121, 0.21);
+        -webkit-box-shadow: 1px 9px 14px 0px rgba(123, 121, 121, 0.21);
+        -moz-box-shadow: 1px 9px 14px 0px rgba(123, 121, 121, 0.21);
+    }
+
+    .clerk_flex_wrap {
+        flex-direction: column;
+    }
+
+    .clerk-facet-group {
+        padding: 0px;
+        border-radius: 0px;
+        box-shadow: none;
+        flex: 0 0 15%;
+        position: relative;
+        z-index: 1;
+        border-right: none;
+        margin-bottom: 1em;
+    }
+
+    #clerk-search-filters {
+        margin: 1em 0;
+    }
+
+    #clerk-facets-container {
+        margin-left: 10px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .clerk-facet-group.clerk_sort_select:before {
+        content: unset !important;
+    }
+}
+
 .clerk_flex_wrap {
     display: flex;
 }
@@ -13,10 +76,17 @@
 .clerk-range-dot-left,
 .clerk-range-dot-right {
     z-index: 1 !important;
+    margin-bottom: 10px;
 }
 
 #clerk-search-page-wrap {
     flex-direction: row;
+}
+
+@media only screen and (max-width: 767px) {
+    #clerk-search-page-wrap {
+        flex-direction: column;
+    }
 }
 
 #clerk-search-filters {
@@ -63,6 +133,12 @@
     background-color: unset !important;
     box-shadow: unset !important;
     color: black;
+}
+
+@media screen and (min-width: 1001px) {
+    .clerk_sort_wrap1 {
+        margin-left: auto;
+    }
 }
 
 .clerk_facet_title {
@@ -116,6 +192,18 @@
     display: block !important;
 }
 
+@media screen and (max-width: 600px) {
+    .clerk-facet-group {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+@media screen and (min-width: 601px) and (max-width: 1000px) {
+    .clerk-facet-group {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
 .clerk-facet-group-title {
     margin-bottom: 1em;
     text-transform: uppercase;
@@ -215,6 +303,11 @@ input.clerk-facet-show-more:checked + .clerk-facet-group-facets + label.clerk-fa
     background-color: #ccc;
     border-color: #000;
 }
+/* width */
+.clerk-facet-group-facets {
+    scrollbar-width: thin;
+    scrollbar-color: #ccc transparent;
+}
 
 .pad-left {
     padding-right: 10px;
@@ -222,11 +315,6 @@ input.clerk-facet-show-more:checked + .clerk-facet-group-facets + label.clerk-fa
 
 .fake_facet .clerk_facet_title {
     background: #eee;
-}
-
-.clerk-facet-group-facets {
-    scrollbar-width: thin;
-    scrollbar-color: #ccc transparent;
 }
 
 /* width */
@@ -260,13 +348,69 @@ input.clerk-facet-show-more:checked + .clerk-facet-group-facets + label.clerk-fa
 }
 
 .clerk_absolute {
-    max-width: 200px;
+    max-width: 100%;
     padding: 10px;
     border: 1px solid #000;
     margin-bottom: 23.5px;
-    margin-left: 10px;
 }
 
 .clerk_sort_wrapper {
     position: relative;
+}
+
+.clerk_sort_wrapper:before {
+    content: "";
+    position: absolute;
+    top: 55%;
+    right: 11px;
+    width: 8px;
+    height: 8px;
+    text-align: center;
+    border: 1px solid #333;
+    border-width: 0 2px 2px 0;
+    font-size: 10px;
+    color: #e4e4e4;
+    transform: translateY(calc(-50% - 5px)) rotate(45deg);
+    transition: 0.3s ease-in-out;
+    font-size: 18px;
+    z-index: 1;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.clerk_sort_select {
+    padding-right: 2em;
+    margin-bottom: 0px;
+    cursor: pointer;
+    text-transform: uppercase;
+    color: #000;
+    letter-spacing: 1px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    text-align: left;
+    border: none;
+    width: 100%;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: transparent;
+}
+
+@media only screen and (max-width: 767px) {
+    .clerk_sort_select {
+        text-align: left !important;
+    }
+    #clerk-facets-container {
+        width: 100%;
+    }
+    .clerk_absolute {
+        max-width: 100%;
+        padding: 0;
+        border: 0;
+        margin-bottom: 0;
+        margin-left: 0;
+    }
 }
