--- a/search/livesearch/full-width-grid/style.css
+++ b/search/livesearch/full-width-grid/style.css
@@ -60,9 +60,7 @@
     height: 480px;
     margin-right: 1rem;
     margin-bottom: 1rem;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: contain;
+    object-fit: cover;
 }
 
 /******************************************************
