--- a/search/livesearch/grid/style.css
+++ b/search/livesearch/grid/style.css
@@ -123,9 +123,7 @@
     width: 6em;
     height: 6em;
     margin-right: 1em;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: contain;
+    object-fit: cover;
 }
 
 .clerk-instant-search-product-name {
