Added comment for custom code for each project

--- a/recs/standard-skeleton/style.css
+++ b/recs/standard-skeleton/style.css
@@ -102,3 +102,9 @@
     right: 0 !important;
     margin-top: -20px;
 }
+
+/*********************************************
+*
+* CUSTOM CSS BELOW HERE 
+*
+*********************************************/
