--- a/facets/top-facets/style.css
+++ b/facets/top-facets/style.css
@@ -14,48 +14,6 @@ h2 {
     display: none;
 }
 
-.clerk_sort_wrapper:after {
-    position: absolute;
-    content: "";
-    top: 50%;
-    right: 15px;
-    width: 28px;
-    height: 28px;
-    text-align: center;
-    line-height: 28px;
-    font-family: Poppins, sans-serif;
-    color: #dcdde0;
-    transform: translateY(-50%) rotate(0deg);
-    transition: 0.3s ease-in-out;
-    font-size: 18px;
-    pointer-events: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.clerk_sort_select {
-    margin-bottom: 0px;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 12px;
-    color: #444;
-    font-family: Poppins, sans-serif;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    position: relative;
-    padding: 20px;
-    text-align: left;
-    border: 1px solid #000;
-    background: transparent;
-    width: 40%;
-    max-height: 55px;
-    height: 100%;
-}
-
 .clerk_sort_select:focus-visible {
     outline: none;
 }
@@ -113,11 +71,10 @@ h2 {
     display: none;
 }
 
-.clerk_facet_title {
+.clerk_facet_title,
+.clerk_sort_select {
     -webkit-tap-highlight-color: transparent;
     -webkit-text-size-adjust: 100%;
-    font-family: Poppins, sans-serif;
-    font-weight: 700;
     font-size: 14px;
     color: #141414;
     line-height: 1.75em;
