--- a/search/livesearch/list/style.css
+++ b/search/livesearch/list/style.css
@@ -1,55 +1,6 @@
 .clerk-instant-search a:hover {
     color: black;
 }
-@media screen and (min-width: 1200px) {
-    .clerk-instant-search-container {
-        width: 50%;
-        right: 386px !important;
-    }
-    .clerk-instant-search-products {
-        padding-right: 2em;
-    }
-    .clerk-instant-search-grid {
-        display: flex;
-    }
-
-    .clerk-col-1 {
-        flex: 2;
-    }
-
-    .clerk-col-2 {
-        flex: 1;
-    }
-
-    .clerk-mobile-button {
-        display: none;
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1200px) {
-    .clerk-instant-search-container {
-        right: 0px !important;
-        width: 100%;
-    }
-    .clerk-mobile-button {
-        display: none;
-    }
-    .clerk-instant-search-button-container {
-        display: none;
-    }
-}
-@media screen and (max-width: 767px) {
-    .clerk-instant-search-container {
-        right: 0px !important;
-        width: 100%;
-    }
-    .clerk-instant-search-grid {
-        display: block;
-    }
-    .clerk-instant-search-button-container {
-        display: none;
-    }
-}
 
 .clerk-instant-search {
     padding: 20px;
@@ -60,11 +11,9 @@
 }
 
 .clerk-instant-search {
-    overflow: scroll;
-    height: calc(100vh - 6em);
+    overflow-y: scroll;
+    height: auto;
     width: 100%;
-    min-width: 650px;
-    max-width: 1000px;
     margin: 0.2em auto;
     background-color: white;
     border: 1px solid #eee;
@@ -83,20 +32,27 @@
     margin: 0px 0px 5px 0px;
 }
 
-.clerk-view-more-results-button1 {
+.clerk-view-more-results-button {
     color: #fff;
     width: 100%;
     display: block;
     padding: 1em;
-    background-color: #009dd6;
+    background-color: #5461ed;
+    border: 1px solid #5461ed;
     font-size: 14px;
     border-radius: 8px;
     text-align: center;
+    text-transform: uppercase;
+}
+
+.clerk-view-more-results-button:hover {
+    text-decoration: none !important;
+    color: #fff !important;
 }
 
 .clerk-instant-search-title {
     color: black;
-    margin: 0px 0px 5px 0px;
+    margin: 5px 0px 5px 0px;
     padding: 0px 0px 10px 0px;
     text-transform: uppercase;
     font-size: 1em;
@@ -136,8 +92,8 @@
 
 .clerk-instant-search-product-image {
     display: inline-block;
-    width: 6em;
-    height: 6em;
+    width: 3em;
+    height: 3em;
     margin-right: 1em;
     background-position: center center;
     background-repeat: no-repeat;
@@ -252,7 +208,11 @@
     padding: 0.1em;
 }
 
+
 @media screen and (min-width: 1200px) {
+    .clerk-mobile-button {
+        display: none;
+    }
     .clerk-instant-search-container {
         width: 50%;
         right: 386px;
@@ -279,7 +239,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1200px) {
     .clerk-instant-search-container {
-        right: 0px;
+        right: 0px !important;
         width: 100%;
     }
     .clerk-mobile-button {
@@ -289,10 +249,12 @@
         display: none;
     }
 }
+
 @media screen and (max-width: 767px) {
     .clerk-instant-search-container {
-        right: 0px;
+        right: 0px !important;
         width: 100%;
+        min-width: 200px !important;
     }
     .clerk-instant-search-grid {
         display: block;
@@ -300,17 +262,17 @@
     .clerk-instant-search-button-container {
         display: none;
     }
-}
-
-@media screen and (min-width: 376px) and (max-width: 800px) {
     .clerk-instant-search {
         min-width: 0px;
+        width: 100%;
     }
 }
 
 @media screen and (max-width: 375px) {
     .clerk-instant-search {
-        min-width: 200px;
+        min-width: 200px;;
+        width: 100%;
+        height: 80vh;
     }
     .clerk-instant-search-col {
         margin: 0px 0px 20px 0px;
