--- a/search/livesearch/grid/style.css
+++ b/search/livesearch/grid/style.css
@@ -1,8 +1,8 @@
 :root {
-    --clerk-primary-color: #4a545b;
+    --clerk-primary-color: #000;
     --clerk-secondary-color: #fff;
-    --clerk-font-color: #4a545b;
-    --clerk-font-family: "Roboto", sans-serif;
+    --clerk-font-color: #000;
+    --clerk-font-family: inherit;
 }
 
 .clerk_instant_search_link:hover {
@@ -26,7 +26,7 @@
 }
 
 .clerk-instant-search {
-    overflow-y: scroll;
+    overflow-y: auto;
     height: auto;
     width: 100%;
     min-width: 320px;
@@ -51,17 +51,22 @@
     margin: 0px 0px 5px 0px;
 }
 
+clerk-instant-search-more-results-wrapper{
+    display: flex;
+    justify-content: center;
+}
+
 .clerk-instant-search-more-results {
     padding: 1em;
     margin: 1em;
     display: flex;
     justify-content: center;
     max-width: 50%;
-    background-color: #9fc9eb;
+    background-color: var(--clerk-primary-color);
     font-size: 14px;
     text-align: center;
     cursor: pointer;
-    color: #fff !important;
+    color: #fff;
     text-decoration: none;
     border: none;
 }
@@ -127,7 +132,6 @@
     margin: 0em 0em 0.2em 0em;
     padding: 0px 5px 0px 0px;
     overflow: hidden;
-    font-weight: 700;
     font-family: inherit;
     color: var(--clerk-font-color);
 }
@@ -225,60 +229,25 @@
 .clerk-instant-search-page {
     padding: 0.1em;
 }
+@media screen and (max-width: 480px) {
+}
 
-@media screen and (min-width: 426px) {
-    .clerk-instant-search {
-        min-width: 200px;
-    }
-    .clerk-instant-search-col {
-        margin: 0px 0px 20px 0px;
-    }
+@media screen and (max-width: 767px) {
     .clerk-instant-search-product-grid {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+    }
+    
+    .clerk-instant-search-container {
+        right: 0px !important;
+        width: 100%;
     }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1200px) {
-    .clerk-instant-search-container {
-        right: 0px !important;
-        width: 100%;
-    }
-    .clerk-mobile-button {
-        display: none;
-    }
-    .clerk-instant-search-button-container {
-        display: none;
-    }
 }
-@media screen and (max-width: 767px) {
-    .clerk-instant-search-container {
-        right: 0px !important;
-        width: 100%;
-    }
-    .clerk-instant-search-grid {
-        display: block;
-    }
-    .clerk-instant-search-button-container {
-        display: none;
-    }
 
-    .clerk-instant-search-container {
-        right: 0px;
-        width: 100%;
-    }
-    .clerk-instant-search-grid {
-        display: block;
-    }
-    .clerk-instant-search-button-container {
-        display: none;
-    }
-}
 
 @media screen and (min-width: 1200px) {
-    .clerk-instant-search-container {
-        width: 50%;
-        right: 386px !important;
-    }
     .clerk-instant-search-products {
         padding-right: 2em;
     }
@@ -294,7 +263,4 @@
         flex: 1;
     }
 
-    .clerk-mobile-button {
-        display: none;
-    }
 }
