--- a/search/searchpage/standard/style.css
+++ b/search/searchpage/standard/style.css
@@ -1,12 +1,3 @@
-.clerk-search-result-wrapper {
-    padding: 0px 0px 0px 0px;
-    background-color: #ffffff00;
-    border-radius: 0px;
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-}
-
 .clerk-see-more-button-wrapper {
     width: 100%;
     display: flex;
@@ -29,9 +20,9 @@
 
 .clerk-grid-wrapper {
     width: 100%;
-    display: grid !important;
-    column-gap: 24px;
-    row-gap: 24px;
+    display: grid;
+    column-gap: 2em;
+    row-gap:1em;
     position: relative;
     text-decoration: none;
     color: #000;
