Removed background color and font-weight of the for query highlight

--- a/search/livesearch/grid/style.css
+++ b/search/livesearch/grid/style.css
@@ -244,6 +244,12 @@ clerk-instant-search-more-results-wrapper{
     text-decoration: none;
 }
 
+.clerk-highlight {
+    /* Using important to overwrite Clerk.js */
+    font-weight: 600 !important;
+    background-color: transparent !important;
+}
+
 /********************************************************
 
     Pages
