--- a/search/livesearch/grid/style.css
+++ b/search/livesearch/grid/style.css
@@ -49,7 +49,7 @@
     margin: 0px 0px 5px 0px;
 }
 
-clerk-instant-search-more-results-wrapper{
+.clerk-instant-search-more-results-wrapper{
     display: flex;
     justify-content: center;
 }
