--- a/search/livesearch/grid/style.css
+++ b/search/livesearch/grid/style.css
@@ -11,9 +11,6 @@
 .clerk_instant_search_link:hover {
     color: var(--clerk-font-color);
 }
-.clerk-instant-search {
-    padding: 20px;
-}
 
 .clerk-instant-search-container a {
     text-decoration: none !important;
@@ -35,6 +32,7 @@
     border-top: 0px;
     border-radius: 5px 5px 10px 10px;
     box-shadow: 0 1em 2em 1em rgba(0, 0, 0, 0.2);
+    padding: 20px;
 }
 
 .clerk-instant-search-no-results {
@@ -286,6 +284,10 @@
     .clerk-instant-search-container {
         right: 0px !important;
         width: 100%;
+    }
+
+    .clerk-instant-search {
+        height:  85vh;
     }
 }
 
