--- a/search/livesearch/full-width-list/style.css
+++ b/search/livesearch/full-width-list/style.css
@@ -228,20 +228,31 @@
     margin-bottom: 1em;
 }
 
+/* Categories */
+.clerk-instant-search-categories {
+  margin-bottom: 1em;
+}
+
 .clerk-instant-search-category {
-    padding: 5px;
-    margin: 5px;
-    width: auto;
-    display: inline-block;
-    border: 1px solid #617948;
-    border-radius: 2px;
-    font-weight: bold;
+  padding: 8px;
+  margin: 5px;
+  width: auto;
+  display: inline-block;
+  border: 1px solid #f3f3f3;
+  border-radius: 10px;
+  font-weight: normal;
+  background: #F1F1F1;
 }
 
 .clerk-instant-search-category a {
-    color: black;
+  color: black;
 }
 
+.clerk-highlight {
+  /* Using important to overwrite Clerk.js */
+  font-weight: 600 !important;
+  background-color: transparent !important;
+}
 /* Pages */
 .clerk-instant-search-pages {
     margin-bottom: 1em;
