--- a/facets/side-facets-new/style.css
+++ b/facets/side-facets-new/style.css
@@ -1,14 +1,19 @@
-.clerk_facets {
-	max-width: 20%;
+#clerk-facet-mobile-toggle,
+.clerk_display_toggle {
+	display: none;
+}
+.clerk-filter-wrap {
+	width: 30%;
+	box-sizing: border-box;
 }
 
 .clerk_facets_container {
-    padding: 0 1rem;
+	padding: 0 1rem;
 }
 
 .clerk_facets_wrapper {
-    border-bottom: 1px solid #d1d5db;
-    padding: 1rem 0;
+	border-bottom: 1px solid #d1d5db;
+	padding: 1rem 0;
 }
 
 .clerk_facets_toggle {
@@ -16,10 +21,10 @@
 	justify-content: space-between;
 	padding: 0.75rem 0;
 	border: none;
-    align-items: center;
-    cursor: pointer;
-    width: 100%;
-    background-color: transparent;
+	align-items: center;
+	cursor: pointer;
+	width: 100%;
+	background-color: transparent;
 }
 
 .clerk_facets_toggle:hover {
@@ -28,8 +33,8 @@
 
 .clerk_facets_toggle_headline {
 	color: #111827;
-    line-height: 1.25rem;
-    font-size: .875rem;
+	line-height: 1.25rem;
+	font-size: 0.875rem;
 }
 
 .clerk_facets_toggle_icons_wrapper {
@@ -44,41 +49,65 @@
 }
 
 .hidden {
-    display: none;
+	display: none;
 }
 
 .clerk_facet_option,
 .clerk_facet_label {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    align-items: center;
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	align-items: center;
+	margin: 0;
+	column-gap: 3px;
 }
 
 .clerk_facet_option {
-    padding-top: .4rem;
+	padding-top: 0.4rem;
 }
 
 .clerk_facet_checkbox {
-    height: 1rem;
-    width: 1rem;
-    border: 1px solid #6b7280;
-    border-radius: 2px;
-    cursor: pointer;
+	height: 1rem;
+	width: 1rem;
+	border: 1px solid #6b7280;
+	border-radius: 2px;
+	cursor: pointer;
 }
 
 .clerk_facet_option_name {
-    margin-left: 1rem;
-    color: #111827;
-    font-size: .875rem;
-    line-height: 1.25rem;
-
+	margin-left: 1rem;
+	margin-right: 0.5rem;
+	color: #111827;
+	font-size: 0.875rem;
+	line-height: 1.25rem;
 }
 
 .clerk_facet_option_count {
-    margin-left: auto;
-    margin-right: .6rem;
-    color: #6b7280;
-    font-size: .9rem;
-    line-height: 1rem;
+	margin-left: auto;
+	margin-right: 0.6rem;
+	color: #6b7280;
+	font-size: 0.9rem;
+	line-height: 1rem;
+}
+
+#clerk-facet-mobile-toggle {
+	display: none;
+}
+
+@media screen and (max-width: 768px) {
+	.clerk-filter-wrap {
+		width: 100%;
+	}
+
+	.clerk_display_toggle_wrapper {
+		margin: 1rem;
+	}
+
+	.clerk_display_toggle {
+		display: flex;
+	}
+
+	.clerk_facets {
+		display: none;
+	}
 }
